# auth-backend

./: .gitignore  README.md  config.py  main.py  piccolo_conf.py  pyproject.toml  status.toml
database/: models.py
routes/: auth.py  user.py  v1.py
util/: database.py  email.py  random.py  security.py  setup.py  status.toml
util/assets/: email_template.html
