[project]
name = "api-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.116.1",
    "hypercorn>=0.17.3",
    "piccolo[postgres,uvloop]>=1.28.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "uvicorn>=0.35.0",
    "uvloop>=0.21.0",
]
